changes to index.html and resume.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Richard Tillies</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Experience</a></li>
-        </ul>
-    </div>
+    <nav class="main-nav">
+      <ul class="nav">
+        <li class="name">Richard Tillies</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Experience</a></li>
+      </ul>
+    </nav>
 
     <header>
       <img src="images/professort.jpg" alt="Professor T avatar" class="profile-image">
@@ -23,13 +23,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-        <p>I was born in the Bronx, NY (go Yankees!) and have along the Eastern Coast. I have nearly 20 years of classroom experience teaching IT, computer science, and mathematics from the second grade through undergrad senior capstone projects.</p>
-        <p>Outside of tech and education, I am a Certified Kickboxing Trainer and have trained in Tae-Kwon Do, Muay Thai, and Brazilian Jiu-Jitsu. I can perform a backflip and solve a Rubik's Cube, but not at the same time.</p>
-      </div> 
+      <section class="card">
+          <h2>Background</h2>
+          <p>I was born in the Bronx, NY (go Yankees!) and have along the Eastern Coast. I have nearly 20 years of classroom experience teaching IT, computer science, and mathematics from the second grade through undergrad senior capstone projects.</p>
+          <p>Outside of tech and education, I am a Certified Kickboxing Trainer and have trained in Tae-Kwon Do, Muay Thai, and Brazilian Jiu-Jitsu. I can perform a backflip and solve a Rubik's Cube, but not at the same time.</p>
+        </section>
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -39,7 +39,7 @@
           <li>Python</li>
         </ul>
         <p>In the long term, I would like to become a freelance website and app developer.</p>
-      </div> 
+      </section>
 
     </main>
     <footer>
