changes to index.html and resume.html

--- a/resume.html
+++ b/resume.html
@@ -8,22 +8,22 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Richard Tillies</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Experience</a></li>
-        </ul>
-    </div>
+    <nav class="main-nav">
+      <ul class="nav">
+        <li class="name">Richard Tillies</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Experience</a></li>
+      </ul>
+    </nav>
 
     <header>
-      <img src="images/professort.jpg" alt="Professor T avatar" class="profile-image">
+      <img src="images/headshot.png" alt="Professional headshot" class="profile-image">
       <h1 class="tag name">Hello, I’m Richard.</h1>
       <p class="tag location">My home is Raleigh, North Carolina.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Education</h2>
         <h3>Master of Science</h3>
         <ul>
@@ -39,9 +39,9 @@
           <li><strong>School:</strong> <a href="https://www.radford.edu" target="_blank"> Radford University</a></li>
           <li><strong>Location:</strong> Radford, VA</li>
           </ul>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Teaching Experience</h2>
         <h3>Instructor, Software &amp; Web Development</h3>
         <ul>
@@ -73,7 +73,7 @@
             <li>MS Office</li>
           </ul>
         </ul>
-      </div> 
+      </section> 
 
     </main>
     <footer>
