Changes to index.html and resume.html, add hobbies.html

--- a/hobbies.html
+++ b/hobbies.html
@@ -25,21 +25,26 @@
 
     <main class="flex">
       <section class="card">
-          <h2>Background</h2>
-          <p>I was born in the Bronx, NY (go Yankees!) and have along the Eastern Coast. I have nearly 20 years of classroom experience teaching IT, computer science, and mathematics from the second grade through undergrad senior capstone projects.</p>
-          <p>Outside of tech and education, I am a Certified Kickboxing Trainer and have trained in Tae-Kwon Do, Muay Thai, and Brazilian Jiu-Jitsu. I can perform a backflip and solve a Rubik's Cube, but not at the same time.</p>
+          <h2>Kickboxing</h2>
+          <p>I have a background in martial arts, specifically Tae-Kwon Do, Muay Thai, and Brazilian Jiu-Jitsu. I am a Certified Kickboxing Trainer and ran a kickboxing fitness studio for five years before the pandemic.</p>
+          <figure>
+            <img class="hobby" src="images/kickboxer.jpg" alt="Holding the championship belt">
+            <figcaption>
+              This is a photo of me holding the championship belt in front of my kickboxing studio.
+            </figcaption>
+          </figure>
+  
         </section>
 
       <section class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Python</li>
-        </ul>
-        <p>In the long term, I would like to become a freelance website and app developer.</p>
+        <h2>Chess</h2>
+        <p>I was an avid chess player as a child. My father taught me how to play when I was four years old. I played on my middle school and high school chess teams.</p>
+        <figure>
+          <img class="hobby" src="images/chess.jpg" alt="Playing chess in NYC">
+          <figcaption>
+            This is a photo of me playing chess in Union Square Park in New York City.
+          </figcaption>
+        </figure>
       </section>
 
     </main>
