--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
         <li class="name">Richard Tillies</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Experience</a></li>
+        <li><a href="hobbies.html">Leisure</a></li>
       </ul>
     </nav>
 
